# AdventOfCode2023

./: .gitignore  README.md  pyproject.toml  run.py
2023/day01/: solver.py
2023/day02/: solver.py
2023/day03/: solver.py
2023/day04/: solver.py
2023/day05/: solver_v1.py
2023/day07/: solver.py
2023/day09/: solver.py
2023/day10/: solver.py
2023/day11/: solver.py
2023/day12/: solver.py
2023/day13/: solver.py
2023/day14/: solver.py
2023/day15/: solver.py
2023/day16/: solver.py
day01/: solver.py
day02/: solver.py
day03/: solver.py
day04/: solver.py
day05/: outtest.txt  solver.py  test_input.txt
day06/: solver.py
day08/: solver.py
