[tool.poetry]
name = "adventofcode2023"
version = "0.1.0"
description = "solutions for Advent of Code 2023"
authors = ["lorenzobellino <lor.bellino@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
